# payflow-semantic-search

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml  docker-entrypoint.sh
examples/: advanced_usage.py  api_server.py  basic_usage.py  benchmark.py  benchmark_results.json  tfidf_vs_transformer.py
examples/sample_data/: contracts.json  generate_sample_data.py  invoices.json  purchase_orders.json  receipts.json  sample_documents.json
src/semantic_search/: __init__.py
src/semantic_search/api/: __init__.py  service.py
src/semantic_search/core/: __init__.py  embeddings.py  engine.py  exceptions.py  hybrid_engine.py  transformer_embeddings.py
src/semantic_search/models/: __init__.py  document.py  query.py  result.py
src/semantic_search/utils/: __init__.py  logging_config.py  text_processing.py  validators.py
tests/: __init__.py  conftest.py  test_engine.py  test_integration.py  test_models.py  test_performance.py
