[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-search"
version = "1.0.0"
description = "Production-ready semantic search utility for financial documents"
authors = [{name = "Karthikay Gundepudi", email = "kgundepudi@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core requirements (as requested)
    "scikit-learn>=1.3.0",
    "numpy>=1.21.0",
    "pydantic>=2.0.0",
    "aiofiles>=23.0.0",
    "python-dateutil>=2.8.0",
    "joblib>=1.3.0",
    "typing-extensions>=4.0.0",
    # SOTA semantic search (Sentence-BERT)
    "sentence-transformers>=2.2.0",
    "torch>=1.12.0",
    "faiss-cpu>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/kgundepudi/semantic-search"
Repository = "https://github.com/kgundepudi/semantic-search"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
